--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Math"]
 	path = Math
 	url = https://github.com/bjarkebrodin/math
+[submodule "Algorithms"]
+	path = Algorithms
+	url = https://github.com/bjarkebrodin/algorithms
